<resources>
    <string name="app_name">Whatsapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_input">password input</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_new">Create New</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="email">Email</string>
</resources>